--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
-    "axios": "^1.6.7",
+    "@ltv/env": "^3.0.0",
     "body-parser": "^1.20.2",
-    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-validator": "^7.0.1"
